# app/DataLogger-OAS.apic.yaml
@@ -115,47 +115,26 @@ definitions:
   input_log:
     type: object
     properties:
-      userId:
+      user_id:
         type: integer
-      processId:
+      process_id:
         type: integer
-      tableName:
+      table:
         type: string
       route:
         type: string
       method:
         type: string
       parameters:
-        type: string
+        type: object
+      result:
+        type: object
+      body:
+        type: object
+      result_code:
+        type: integer
     required:
-      - userId
-      - processId
-      - tableName
-      - route
-      - method
-      - parameters
-  output_log:
-    type: object
-    properties:
-      id:
-        type: integer
-      userId:
-        type: integer
-      processId:
-        type: integer
-      tableName:
-        type: string
-      route:
-        type: string
-      method:
-        type: string
-      parameters:
-        type: string
-    required:
-      - id
-      - userId
-      - processId
-      - tableName
+      - user_id
       - route
       - method
       - parameters
@@ -312,6 +291,35 @@ definitions:
       id:
         type: integer
     required:
+      - id
+  output_log:
+    type: object
+    properties:
+      user_id:
+        type: integer
+      process_id:
+        type: integer
+      table:
+        type: string
+      route:
+        type: string
+      method:
+        type: string
+      parameters:
+        type: string
+      result:
+        type: object
+      body:
+        type: object
+      id:
+        type: integer
+      result_code:
+        type: integer
+    required:
+      - user_id
+      - route
+      - method
+      - parameters
       - id
 responses:
   'trait:error-response:400':
